--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,7 +16,9 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
-
+retrofit = "com.squareup.retrofit2:retrofit:2.9.0"
+retrofit-gson = "com.squareup.retrofit2:converter-gson:2.9.0"
+okhttp-logging = "com.squareup.okhttp3:logging-interceptor:4.12.0"
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 
